--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
           <img id="icon-play" src="./assets/card-example/icons/play.png" />
           <img id="icon-left" src="./assets/card-example/icons/left.png" />
           <img id="icon-right" src="./assets/card-example/icons/right.png" />
-          <img id="paintandquest-preview" src="./assets/card-example/portfolio/paintandquest-preview.png" />
-          <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./assets/card-example/portfolio/paintandquest.mp4"></video>
-          <video id="paintandquest-video-webm" autoplay="false" loop="true" src="./assets/card-example/portfolio/paintandquest.webm"></video>
+          <img id="paintandquest-preview" src="https://cdn.glitch.global/23d009b9-4a05-407c-8180-f233078ffc30/heart0000.png?v=1644332030390" />
+          <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+          <video id="paintandquest-video-webm" autoplay="false" loop="true" src="https://cdn.glitch.global/23d009b9-4a05-407c-8180-f233078ffc30/heart.webm?v=1644333343859"></video>
           <img id="coffeemachine-preview" src="./assets/card-example/portfolio/coffeemachine-preview.png" />
           <img id="peak-preview" src="./assets/card-example/portfolio/peak-preview.png" />
           
@@ -276,10 +276,7 @@
             animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
           ></a-image>
 
-          <a-image visible=false id="location-button" class="clickable" src="#icon-location" position="0.42 -0.5 0" height="0.15" width="0.15"
-            animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
-          ></a-image>
-
+         
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 -0.25 0" scale="0.004 0.004 0.004" src="#avatarModel"></a-gltf-model>
 
           <a-text id="text" class="clickable" value="" color="black" align="center" width="2" position="0 -1 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5"></a-text>
