--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <img id="icon-left" src="https://cdn.glitch.global/23d009b9-4a05-407c-8180-f233078ffc30/icon_left.png?v=1644396134037" />
           <img id="icon-right" src="https://cdn.glitch.global/23d009b9-4a05-407c-8180-f233078ffc30/icon_right.png?v=1644396136435" />
   
-          <video id="paintandquest-video-mp4" autoplay="enabled" loop="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+          <video id="paintandquest-video-mp4" autoplay="enabled" loop="true" src="https://video.wixstatic.com/video/22c479_49bf0ae767ad4d179ddef50b6de37853/240p/mp4/file.mp4"></video>
           <video id="paintandquest-video-webm" autoplay="enabled" loop="true" src="http://"></video>
          
           <img id="coffeemachine-preview" src="./assets/card-example/portfolio/coffeemachine-preview.png" />
