--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         });
             text.addEventListener('click', function (evt) {
           if (currentTab === 'profile') {
-            window.location.href="https://github.com/Minlinelee/gate05/blob/main/The%20digital%20transformation%20of%20painting.pdf";
+            window.location.href="https://cdn.glitch.global/23d009b9-4a05-407c-8180-f233078ffc30/The%20digital%20transformation%20of%20painting.pdf?v=1644529503535";
           }
         });
         
